syntax = "proto3";

// Config represents a config for a Harpocrates server.
message Config {
  // Required. The host name of the server.
  string host_name = 1;
  // Required. The email address of the server admin. (used for ACME only)
  string email = 2;
  // Required. The directory to use to store TLS certificates.
  string cert_dir = 3;
  // Required. The location to use to store encrypted password data.
  string pass_loc = 4;
  // Required. The location of the encrypted key.
  string key_file = 5;
  // Multi-factor authentication registration blobs.
  repeated string mfa_reg = 6;
  // The command to run when an alert is generated.
  string alert_cmd = 7;
  // The length of an unattended session, in seconds. Defaults to 300 (5 minutes).
  double session_duration_s = 8;
  // The rate that new sessions (password login attempts) can be made per IP, in Hz. Defaults to 1.
  double new_session_rate = 9;
}
